tests/bad_programs/syntax_errors/reserved_word_as_var3.notc
int main() {
    int a, b, return, c;
}
